<resources>
    <string name="app_name">RummyTitans</string>
    <string name="app_name_rummy">RummyTitans</string>
    <string name="client_id" translatable="false">
        487152729427-dvcb1ee2lqo9f0o4qlb562cpdghii7vf.apps.googleusercontent.com
    </string>
    <string name="truecaller_partnerKey">__tvomb7svrmtu1kx5qguqwdk6oxv-klblwp6fehx54</string>
    <string name="register_login">register / login</string>
    <string name="age_confirmation_login_text">To play pay-to-play contest on MyTeam11, users must be 18 years of age or above and must not be a resident of Andhra Pradesh, Assam, Nagaland, Odisha, Sikkim and Telangana.</string>
    <string name="sports_tiger_package">com.sportstigeratoz</string>
    <string name="playstore_url">https://play.google.com/store/apps/details?id=</string>
    <string name="facebook_app_id">699481191999884</string>
    <string name="apxor_key">e047157755a2baa80bd1a217b99054f1</string>
    <string name="smartech_key">e047157755a2baa80bd1a217b99054f1</string>
    <string name="hansle_app_id">YAIV36824R8RCXX6QP9AM81VU</string>
    <string name="hansle_key">ZI8O7EEPP1HDROH1NBY0ZRKO571T0FNQLV23ARX2VXVMJ0H7RW</string>
    <string name="appsflyer_open_app_link">rummytitansopenapp</string>
    <string name="your_winning">Your Winning</string>
    <string name="haptik_sdk_client_id">561b16876511cc8d50cd3d6e2fd77e520ead9508</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY" translatable="false">pE7us5zjXc43HaOX2JJtBtzJD</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" translatable="false">
        ebm482Nq6anTlWJmhTUhLWv5Qr3Q0Eu4sHpC9lucznoUWLxUGV
    </string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="txt_email_or_mobile">Enter Email / Mobile Number</string>
    <string name="txt_sign_up_now">SIGN UP NOW</string>
    <string name="txt_enter_email">Enter Email</string>
    <string name="txt_enter_your_email">Enter Your Email</string>
    <string name="txt_enter_password">Enter Password</string>
    <string name="txt_or">or</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_span_size_sign_up">Sign up</string>
    <string name="txt_sign_in_btn">Already have an account? Sign In</string>
    <string name="txt_sign_up_btn">Don\'t have an account? Sign up</string>
    <string name="txt_forgot_password">Forgot Password</string>
    <string name="change_language">Do you want to change language ?</string>
    <string name="allow_notifications">Go to settings and allow notifications for RummyTitans</string>
    <string name="txt_welcome_myteam11">Welcome to RummyTitans</string>
    <string name="txt_sign_in_with_social">Sign-In with Social</string>
    <string name="txt_sign_up_with_social">Sign-up with Social</string>
    <string name="txt_sign_up">SIGN UP</string>
    <string name="txt_sign_up_continue">Continue</string>
    <string name="txt_verify">Verify</string>
    <string name="txt_enter_otp">Enter OTP</string>
    <string name="txt_send_otp">SEND OTP</string>
    <string name="hint_enter_mobile_number">Enter Mobile Number</string>
    <string name="txt_verify_mobile_number">Verify Mobile Number</string>
    <string name="allow_contacts_msg">Please permit the permission through the Settings to access your contacts.</string>
    <string name="permission_description">Select Permission -> Enable Permission</string>
    <string name="txt_we_ve_sent_a_verification_code_to_mobile_number_enter_the_code_below_to_verify_it_s_you">We’ve
        sent a verification code to “Mobile Number.” Enter the code below to verify it’s you.
    </string>
    <string name="no_contact_pls_update">You haven\'t sync your contacts yet, Please sync your contacts first</string>
    <string name="do_you_realy_wants_update_contacts">Do you want to update your Contacts?</string>
    <string name="txt_sign_up_desc">By Clicking on Signup, I hereby confirm to be 18 years old &amp; provide my
        acceptance to Terms &amp; Conditions and Privacy Policy of RummyTitans.
    </string>
    <string name="captain_points">Captain get <b>2X</b> points</string>
    <string name="vice_captain_points">Vice Captain get <b>1.5X</b> points</string>
    <string name="choose_captain_vice_captain"> <![CDATA[ Choose Captain & Vice Captain]]></string>
    <string name="txt_register_social_login">To continue signing up with your social account, please fill the
        below-required details.
    </string>
    <string name="txt_enter_your_email_amp_password_or_use_social_login_to_continue_your_fantasy_journey_with_myteam11">
        <![CDATA[Enter your Email & Password or use social login to continue your fantasy journey with RummyTitans]]></string>
    <string name="txt_refer_code_optional">Refer Code (Optional)</string>
    <string name="txt_create_new_password">Create New Password</string>
    <string name="txt_successfully_verified">You have successfully verified your account. This is last Step to reset
        your password.
    </string>
    <string name="txt_create_password">CREATE PASSWORD</string>
    <string name="txt_almost_done">ALMOST DONE</string>
    <string name="txt_your_team_name_can_never_be_edited_set_it_once_n_set_it_right">Your user name can never be edited.
        Set it once. Set it right!
    </string>
    <string name="txt_profile_info">Profile Info</string>
    <string name="txt_your_team_name_can_never_be_edited">Your user name can never be edited</string>
    <string name="txt_residents_of_assam_odisha_telangana_amp_nagaland_are_not_eligible_to_play">
        <![CDATA[Residents of Andhra Pradesh, Telangana, Odisha, Assam, Nagaland & Meghalaya, are not eligible to play]]></string>
    <string name="txt_let_s_play">Let\'s Play</string>
    <string name="txt_your_name_should_match_with_your_authentic_identity">Your name should match with your authentic identity.</string>
    <string name="txt_profile_avatar">Profile Avatar</string>
    <string name="hint_enter_your_team_name">Enter Your User Name</string>
    <string name="hint_enter_your_full_name">Enter Your Full Name</string>
    <string name="verify_mobile_number">Enter your registered mobile number to receive a 6 digit OTP to reset your Password.</string>
    <string name="enter_the_mobile_number_to_associated_with_your_account_we_will_send_you_4_digit_otp_to_reset_your_password">
        Enter the mobile number to associated with your account. we will send you 6 digit OTP to reset your password.
    </string>
    <string name="txt_remember_password">Remember password? Sign In</string>
    <string name="err_enter_email">Please enter your email address!</string>
    <string name="err_enter_password">Please enter your password!</string>
    <string name="err_invalid_email">Please enter a valid email address!</string>
    <string name="err_invalid_password">Please enter a valid password!</string>
    <string name="err_invalid_refer_code">Please enter a valid refer code!</string>
    <string name="err_invalid_mobile_number">Please enter a valid mobile number!</string>
    <string name="err_invalid_otp">Please enter a valid OTP!</string>
    <string name="contentDescriptionAvatar">Image Avatar</string>
    <string name="contact_us">Contact Us</string>
    <string name="err_enter_otp">Please Enter 6 Digit OTP</string>
    <string name="otp_you_entered_invalid">The OTP you entered is invailid. Please enter the correct OTP</string>
    <string name="contentDescriptionAvatarSelection">contentDescriptionAvatar selection</string>
    <string name="click_on_the_verification_link">Click on the Verification Link sent to you on your entered email address.</string>
    <string name="title_match_fixture">Fixtures</string>
    <string name="title_match_live">Live</string>
    <string name="title_match_completed">"Completed "</string>
    <string name="download">Download</string>
    <string name="teamname">User Name</string>
    <string name="rank">Rank</string>
    <string name="switch_teams">Switch Team</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="sportstiger">Sports Tiger</string>
    <string name="sporttiger_live_match_prediction">Scores &amp; News</string>
    <string name="you_can_rejoin_these_contest">You can join this contest with more than 1 team</string>
    <string name="str_create_team">Create Team</string>
    <string name="str_team_list">My Teams</string>
    <string name="str_team_created">Team Created</string>
    <string name="str_joined_contests">Joined Contests</string>
    <string name="fantasy_point_system">Fantasy Point System</string>
    <string name="how_to_play">How To Play</string>
    <string name="about_us">About Us</string>
    <string name="faq_s">FAQs</string>
    <string name="legalities">Legalities</string>
    <string name="offer_terms_amp_conditions"><![CDATA[Offer Terms & Conditions]]></string>
    <string name="regular_amp_safe_play"><![CDATA[Regular & Safe play]]></string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="log_out_device_msg">Do you want to logout ?</string>
    <string name="log_out_all_device">Logout From All Device</string>
    <string name="tutorial_videos">Tutorial Videos</string>
    <string name="log_out">Logout</string>
    <string name="pick_wk">Pick 1 Wicket-Keeper</string>
    <string name="pick_gk">Pick 1 Goal-Keeper</string>
    <string name="pick_bats">Pick 3-5 Batters</string>
    <string name="pick_def">Pick 3-5 Defenders</string>
    <string name="pick_bowls">Pick 3-5 Bowlers</string>
    <string name="pick_mid">Pick 3-5 Mid-fielders</string>
    <string name="pick_ar">Pick 1-3 All-Rounders</string>
    <string name="pick_st">Pick 1-3 Forward</string>
    <string name="err_insuficient_credit">Insufficient Credits</string>
    <string name="err_select_captain_vice_captain">Please select Captain or Vice Captain</string>
    <string name="err_select_player">Select All Score Multiples Player First</string>
    <string name="err_winning_amount_min_1">Winning amount can\'t be less then ₹</string>
    <string name="err_winning_amount_max_1">Winning amount can\'t be more than ₹</string>
    <string name="err_winning_amount_min_2" />
    <string name="err_winning_amount_max_2" />
    <string name="err_contest_member_min">Member can\'t be less than 2</string>
    <string name="err_contest_member_max">Member can\'t be more than 50</string>
    <string name="err_entry_fee_min">Entry Fee can be varied on the basis of contest range &amp; winnings. Keep an entry
        fee of minimum ₹5
    </string>
    <string name="err_enter_contest_code">Enter contest code to continue!</string>
    <string name="volleyball_player1">Libero</string>
    <string name="volleyball_player2">Setter</string>
    <string name="volleyball_player3">Blocker</string>
    <string name="volleyball_player4">Attacker</string>
    <string name="volleyball_player5">Universal</string>
    <string name="dialog_no_internet">No Internet</string>
    <string name="dialog_no_internet_found_check_your_connection_or_try_again">No Internet found. Check your connection or try again.</string>
    <string name="cancel">Cancel</string>
    <string name="withdraw_money">Withdraw Money</string>
    <string name="exit">EXIT</string>
    <string name="enter_the_code_that_has_just_arrived_at_this_number">Enter the code that has just arrived at this number</string>
    <string name="edit">Edit</string>
    <string name="you_have_entered_wrong_verification_code">You have entered wrong verification code.</string>
    <string name="i_did_not_get_the_code">I did not get the code ?</string>
    <string name="resend">Resend</string>
    <string name="okay">Okay</string>
    <string name="sec">sec</string>
    <string name="pinview_sixdigit">------</string>
    <string name="withdrawal_request_success">Withdrawal Request Success</string>
</resources>