<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.rummytitans.sdk.cardgame.ui.profile.updatePhone.UpdatePhoneViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_min"
        android:layout_marginEnd="@dimen/margin_min"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView59"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_code_that_has_just_arrived_at_this_number"
            android:textColor="@color/text_color8"
            android:textSize="12sp"
            android:fontFamily="@font/rubik_regular"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ic_edit_rummy"
                android:backgroundTint="@color/text_color8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/textView60"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text='@{viewModel.mobileNumber+" "}'
                android:textColor="@color/text_color8"
                android:fontFamily="@font/rubik_medium"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/ivEdit"
                android:layout_marginStart="@dimen/margin_min"
                app:layout_constraintTop_toTopOf="@id/ivEdit"
                app:layout_constraintBottom_toBottomOf="@+id/ivEdit"
                tools:text="9680236633" />


            <TextView
                android:id="@+id/textView61"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginStart="4dp"
                android:text="@string/edit"
                android:visibility="gone"
                android:onClick="@{()->viewModel.onEditMobileClick()}"
                android:textColor="@color/gunmetal"
                android:fontFamily="@font/rubik_medium"
                android:textSize="12sp"
                app:setUnderline="@{true}" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.chaos.view.PinView
                android:id="@+id/otpView"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:cursorVisible="true"
                android:focusable="true"
                android:hint="@string/pinview_sixdigit"
                android:inputType="number"
                android:textColorHint="@color/text_color2"
                android:textColor="@color/text_color8"
                android:textSize="18sp"
                android:fontFamily="@font/rubik_medium"
                app:itemCount="6"
                app:itemHeight="@dimen/edittext_height"
                app:itemSpacing="14dp"
                app:itemWidth="43dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lineColor="@color/grayBorder"
                app:lineWidth="1dp"
                app:viewType="line" />

            <TextView
                android:id="@+id/textView226"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/you_have_entered_wrong_verification_code"
                android:textColor="@color/redVariant1"
                android:textSize="12sp"
                android:visibility="@{viewModel.showError?View.VISIBLE:View.GONE}"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginStart="@dimen/margin_min"
                app:layout_constraintStart_toEndOf="@+id/textView225"
                app:layout_constraintTop_toBottomOf="@+id/otpView"
                tools:visibility="visible" />


            <TextView
                android:id="@+id/textView62"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="3dp"
                android:text="@string/i_did_not_get_the_code"
                android:textColor="@color/text_color2"
                android:textSize="12sp"
                android:visibility="@{viewModel.timeIsOver?View.VISIBLE:View.GONE}"
                app:layout_constraintEnd_toStartOf="@+id/textView63"
                app:layout_constraintTop_toBottomOf="@+id/textView226"
                tools:visibility="gone" />


            <TextView
                android:id="@+id/textView63"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:onClick="@{()->viewModel.requestOTP()}"
                android:text="@string/resend"
                android:textColor="@color/text_color3"
                android:textSize="12sp"
                android:visibility="@{viewModel.timeIsOver?View.VISIBLE:View.GONE}"
                app:layout_constraintEnd_toEndOf="@+id/otpView"
                app:layout_constraintTop_toTopOf="@id/textView62"
                app:setUnderline="@{true}"
                tools:visibility="gone" />


            <TextView
                android:id="@+id/textView224"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_min"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@{viewModel.remainTimeText}"
                android:textColor="@color/text_color8"
                android:textSize="12sp"
                android:visibility="@{viewModel.timeIsOver?View.GONE:View.VISIBLE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/otpView"
                tools:text="59"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/textView225"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/sec"
                android:textColor="@color/text_color3"
                android:textSize="12sp"
                android:visibility="@{viewModel.timeIsOver?View.GONE:View.VISIBLE}"
                app:layout_constraintStart_toEndOf="@+id/textView224"
                app:layout_constraintTop_toTopOf="@+id/textView224"
                tools:visibility="visible" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>
