<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<data><variable
    name="colorcode"
    type="String" />
<import type="android.graphics.Color"/>
</data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/app_name"
                    android:textColor="@color/text_color8"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grayBorder"
                    app:layout_constraintTop_toBottomOf="@+id/textView29" />

                <TextView
                    android:id="@+id/msg"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/allow_notifications"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_color2"
                    app:layout_constraintBottom_toTopOf="@+id/discription"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view"
                    app:layout_constraintVertical_bias="0.25"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/discription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/permission_description"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_color2"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/msg" />

                <LinearLayout
                    android:id="@+id/linearLayout10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/cancel"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@{Color.parseColor(colorcode)}"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/cancel"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/ok"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@color/maingreen"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/okay"
                        android:fontFamily="@font/rubik_medium"
                        android:textColor="@color/text_color8"
                        android:textSize="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</layout>